# ChangeLog for media-sound/giada
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/giada/ChangeLog,v 1.1 2012/11/27 07:38:44 radhermit Exp $

*giada-0.5.4 (27 Nov 2012)

  27 Nov 2012; Tim Harder <radhermit@gentoo.org> +giada-0.5.4.ebuild,
  +files/giada-0.5.4-configure.patch, +files/giada-0.5.4-flags.patch,
  +metadata.xml:
  Initial import, ebuild by me.
