@@ -4,17 +4,19 @@ Hash: SHA256
 AUX giada-0.5.4-configure.patch 1211 SHA256 db02aa4b384d7dea89016e33fdbc9f7efb3419becf6554400bb7b7891165b8a1 SHA512 f6349a7ab5fe4ae0de216f5a169f6f111c8279a8c87a23db099322ccbbe9a266d9d6b4c9754f6c838f8d06b3abbe44569687f7b332a5284027a6e88d71a4b345 WHIRLPOOL 59f0aa9d275d63da9e0dbb5f7fe46355906b61d202f7f6d61bc93f4727f538ff475856d10798115c41cd1f42296731271662ea8c4d51c27d13fbbb2b0d2ff843
 AUX giada-0.5.4-flags.patch 317 SHA256 8455d0d2680038c75478d9f52264c61c63adc906f51122c36c45dd428efd2055 SHA512 d30edde13eef3a76e72ab2ef052ff4983f76293b158f1ecbca056510f8d875e2afc2cb5a0e339124f3243b17bf59f86432fe04621e0deacc72edabd9b05a0525 WHIRLPOOL 14ad4eb381c6c3f6fb3bc846e7c1c0b3058039ea471db1ad7e8d3581473fd6e75ea35451b4ab8c35e032ff3b96f59e7f242b86e2f709de47f947d4f587df6e96
 DIST giada-0.5.4.tar.gz 178328 SHA256 6dfcaf27efc59927be825548454d03e5b8a21a9d6d105932917c802e32bfa4a3 SHA512 111ae6cbe562ba61a22526b35001062b04b95fd7d6f9c3204d048c40f6f719b43a126d153cc9e0a5cb5ac8e603ff3935282115283fe5dad90e2d0572db231555 WHIRLPOOL 20b9857ca8e7f8a8c77b5137c9dd7467916d014da25682fe684a7f3e4215f7f9aa6072e44435b358703aa5f2a3c4eb27f66792f6085ca8d9ac6e3d887171d6e4
+DIST giada-0.5.6.tar.gz 181555 SHA256 6be363d47fea1d2b168a3ed9fc5182b8bdda5891fc495a577957fec26db7baba SHA512 9c1a0d40df4489fb07fef97e8a4b902b3cdac5fca7711315b21a1036e4b9e0e60e2d6d04a5c0b3f77890750c06043197a77a038c16ebf320cc989eb643534aba WHIRLPOOL 064ad8516cac7d2c9bb0b85e2575b8d4a596d56579f29ba7d9d760f2482cd80506881730eab37b6ff43aafe93c7302307843569c665fcca613dddc140647bca1
 EBUILD giada-0.5.4.ebuild 1095 SHA256 fca12e60e56dc3aa638b7ce4cf284c471029768016ff56676352d8e0f238baee SHA512 66a8bfd0aeb4450db3a84bdce3c22ae9fccefb58b045ceb4cdb24e9728f246221408366478da44bbbb6741309207f60117897d080150a0f93d7213af2da8761a WHIRLPOOL d6e0bf4acd134cd8a07d5a58c6d43a53a730b2e91c7896b67b4839571e3a4bef821b56c3e4d9385af6d7647cddd59bcd879504acb9d0c94cab39a76600a95326
-MISC ChangeLog 428 SHA256 54e253cb858a1fa3dea645ddd48db13c16874c60f098c6f683717166f1d2fdb3 SHA512 5f9287d688c8436de36f58105db7aa4915738d280a3039514fea249f44f6b6fdcb49c17306917f7fa2b28ffee4a9146a2546662590b146c25beed379583e4a7c WHIRLPOOL 7d7d547d0a34075bdf4cc416d56b69d40006a53d30366c81375b17a0ee09c19614918d7002ceb8ac9abc366070ed217324096b54b4680ba455c1c7a86e69b02e
+EBUILD giada-0.5.6.ebuild 1109 SHA256 c5ce2e0ab5cca17fdf903ac1a650282988bc87ce8d8975f81706ff3d8f9a9ae3 SHA512 781632f5c874ff452bdf22d1fcc5052cd37951c85c270c86996c8027f4a7d741d8cda336ea21f3d8a83a8498d442b0906adbc4875d1219e60f692b41ab54b9df WHIRLPOOL ae5665b664b13ea1ab74f3f46db5f11e8384b4c011fba64eba69abb7a2c8582cf62ee6e33f81285dcf65864d4e426017453feee216adf741f8660938f69d0311
+MISC ChangeLog 543 SHA256 94f66315182493594c13546189b7106729b0b039b2aa7d3fb23fd395d6b22654 SHA512 3d49b68679c43310f138521ef82e89d1af82283309f9a57e20391e402b524bf5412aa08f780dac727e41663e1cc14a70ccb70b0ecebdf0e500fc6525f41964f8 WHIRLPOOL 828fe08b90a46f6a7fcddd1805401f0fcf76932cec21b191c1f805c868a49faccbdbca49c190de4762b8ca196d66346d521f2620d08884216d4cc00dfee9fed7
 MISC metadata.xml 161 SHA256 0ba191421eefd954d1efe9f6c3384e8c8d7455d35a7e79457272e1c29211b09e SHA512 e9f8695c64d7b6aa86b9b6186490d50b5a75d593ac1c86b9698265c6345899c64fa712acdde3bdbfb2464139e44623efdae29b67b73c1c85bcbedfbd10e874fd WHIRLPOOL c01ec8b583f907a3a62da7d5bf74d09809244709021f437dc3f0064b2d52baa3dd4386369b46a9fd74020146017cf6117ad04b147e8538b1a2c7202e1b4a2dd5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQtG4GAAoJEEqz6FtPBkyjmmsH/2vZN7BChBPqCJtkO18kPBw/
-QFcK/opX5Q+Ytn6Oc/2QMHkITwHDA9H6/mtPLF6DhWetPz00jj8XfmQZ7wrKl1a2
-MRqSp7QjE217XOeOn6H0eNi7plliJ85PsLrYpiKWTFokatYmf6L3WxnnHKQTljqr
-jhIPOGLgWhAyxh+vBfkg9Wud6OoQrlesboYh5n3SKxnJP/oaSskEQTHnGcDrp1XW
-ZohTdR4jffAUxeCa36qzUX5m7eFKHWJHvBNZlTDt6RXYQcJFwKwIbiahcDh9tcUG
-TUVX28QLqaGW+O+ynJlEoxvZ+NHw6K1j1dFOUf71w6YwsEy+KHLQWQnTqolOJYQ=
-=L0vf
+iQEcBAEBCAAGBQJQ5PiOAAoJEEqz6FtPBkyjqzMIAKhDEtmn0XEse7UXkKowe0b+
+UwEITgWzU5t2mm0Gih8LbZr+3ESD2a9AZUefCpfzXpC8kfssPMHUtBqxb5I0ts8r
+fGPv6N9qDjSvhcrE4+rKHwADProMF8E2rUfpEqBeqCRsJidcqAyxBhdXDiwy9MZG
+vHZ1CCciC4KaQKnCaH9E5ji4giVuoXy5qKMhbvJ8aLakok3iT6HFR3n+yN4Z9kUS
+GC7PcE+q4D/k1Zy6YBk/OGVThALR7HVoDT3hLxmmyvXGAM9PTKiXrAodMpbr/yrB
+5N1aSrIvrzflRnLIN0P5N23DJvyvT50yWuEyrvL4dQbfRjiy7pVP0lGC6Ff+KGs=
+=SMZE
 -----END PGP SIGNATURE-----
